--- a/aggregated-2/README.adoc
+++ b/aggregated-2/README.adoc
@@ -1,4 +1,7 @@
 = Module 2 Readme
+ifdef::env-idea[:imagesdir: src/docs/images]
+ifdef::pdf-single-conversion[:imagesdir: src/docs/images]
+ifdef::pdf-aggregated-conversion[:imagesdir: ../../../aggregated-2/src/docs/images]
 
 This is the readme file of the Module 1.
 
